# nanogpt

./: .gitignore  Cargo.toml  README.md  gpt.py
src/: bigram.rs  data.rs  gpt.rs  infer.rs  lib.rs  main.rs  model.rs  train.rs  utils.rs
