[package]
name = "nanogpt"
version = "0.1.0"
edition = "2024"
default-run = "nanogpt"

[lib]
name = "nanogpt"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"

[dependencies]
burn = { version = "0.20.0", features = ["std", "train", "tui", "wgpu"] }
itertools = "0.14.0"
pico-args = "0.5.0"
rand = "0.9.2"
serde = "1.0.228"
